# SE26Project-04

./: .gitignore  7.7.txt  README.md  feature2.md  feature4.txt  test_feature3.txt
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  data.py  main.py
backend/app/agents/: __init__.py  deepseek_client.py  graph_agent.py  llm_client.py  qa_agent.py  reading_mode_agent.py  search_agent.py  summarize_agent.py
backend/app/api/: admin.py  auth.py  debug_crawl.py  health.py  learning.py  papers.py  profile.py  recommendations.py  search.py  subscriptions.py  tasks.py
backend/app/core/: auth.py  config.py  database.py
backend/app/model/: __init__.py  entities.py
backend/app/repository/: chunks.py  health.py  papers.py
backend/app/schema/: auth.py  paper.py  papers.py  qa.py
backend/app/service/: admin.py  agent.py  arxiv_client.py  auth.py  content_validator.py  crawl_scheduler.py  dedupe.py  health.py  learning.py  paper.py  (+12 more)
backend/migrations/: env.py
backend/papermate_backend.egg-info/: SOURCES.txt  top_level.txt
backend/scripts/: import_seed.py  seed.py  smoke_paper_graph.py  smoke_parse_agent.py  smoke_smart_search.py
backend/tests/: test_admin.py  test_api_auth_guards.py  test_arxiv_client.py  test_chunks_api.py  test_debug_crawl.py  test_health.py  test_learning_api.py  test_orm.py  test_papers.py  test_papers_api.py  test_parse_agent_runner.py  test_prod_docs.py  test_profile_recommendations.py  test_qa_agent_flow.py  test_smart_search.py  test_subscription_collect.py  test_tasks_api.py  test_title_dedupe.py
(+298 files in other folders)
